// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontVariant renders 0 1`] = `
Array [
  .c0 {
  font-variant: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariant renders function 1`] = `
Array [
  .c0 {
  font-variant: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariant renders invalid theme path 1`] = `
Array [
  .c0 {
  font-variant: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariant renders negative number 1`] = `
Array [
  .c0 {
  font-variant: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariant renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-variant: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-variant: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariant renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    font-variant: July;
  }
}

@media April {
  .c0 {
    font-variant: August;
  }
}

@media January {
  .c0 {
    font-variant: September;
  }
}

@media April {
  .c0 {
    font-variant: November;
  }
}

@media June {
  .c0 {
    font-variant: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-variant: July;
  }
}

@media April {
  .c0 {
    font-variant: August;
  }
}

@media January {
  .c0 {
    font-variant: September;
  }
}

@media April {
  .c0 {
    font-variant: November;
  }
}

@media June {
  .c0 {
    font-variant: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant: January;
  }
}

@media April {
  .c0 {
    font-variant: December;
  }
}

@media January {
  .c0 {
    font-variant: April;
  }
}

@media April {
  .c0 {
    font-variant: May;
  }
}

@media June {
  .c0 {
    font-variant: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant: January;
  }
}

@media April {
  .c0 {
    font-variant: December;
  }
}

@media January {
  .c0 {
    font-variant: April;
  }
}

@media April {
  .c0 {
    font-variant: May;
  }
}

@media June {
  .c0 {
    font-variant: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariant renders postitive number 1`] = `
Array [
  .c0 {
  font-variant: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariant renders string 1`] = `
Array [
  .c0 {
  font-variant: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariant renders valid theme path 1`] = `
Array [
  .c0 {
  font-variant: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
